tests/valid/indexing.m
[a{1:3}] = b(c{:});
