tests/invalid/cell_array.m
% TODO: what separators are allowed {a b c}
